--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body style="background-color:#F4F9FF;">
     <div id="container"/>
-    <script src="main.js"></script>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-</body>
+<script src="main.8d335868453d93e9eb44.js"></script><script src="worker.5ea630313b40984cbac6.js"></script></body>
 </html>
