--- a/webclient/src/index.html
+++ b/webclient/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
       rel="shortcut icon"
-      href="public/logo_smartvault.svg"
+      href="public/logo_R.svg"
       type="image/x-icon"
     />
     <title>The R Bank </title>
