switched step 1 to redux

--- a/webclient/src/index.html
+++ b/webclient/src/index.html
@@ -11,7 +11,7 @@
     <title>The R Bank </title>
   </head>
 
-<body style="background-color:#F4F9FF;">
+<body style="height: 100%;">
     <!-- ======== Main Page =========== -->
     <div id="container">
 </body>
