updated with portfolio

--- a/webclient/src/index.html
+++ b/webclient/src/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
       rel="shortcut icon"
-      href="public/logo_R.svg"
+      href="public/logo_no_black.svg"
       type="image/x-icon"
     />
-    <title>The R Bank </title>
+    <title>No Bank </title>
   </head>
 
 <body style="height: 100%;">
