--- a/webclient/src/index.html
+++ b/webclient/src/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" ></script>
+       <!-- ======== TODO: Remove JQuery // used for Viper =========== -->
+
     <link
       rel="shortcut icon"
       href="public/logo_no_black.svg"
